src/legends/modules/Home/components/QuestsSection/QuestsSection.module.scss
@import '@legends/styles/base.scss';

.wrapper {
  margin-bottom: 4.5rem;

  .titleAndButtons {
    @include container;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;

    .buttons {
      display: flex;
      align-items: center;
      gap: 0.5rem;

      .button,
      .arrowButton {
        background-color: #191a1f;
        border-radius: 0.5rem;
      }

      .button {
        padding: 0.5rem 1rem;
        font-size: 1rem;
        font-weight: 500;
        height: 2.5rem;
      }

      .arrowButton {
        width: 2.5rem;
        height: 2.5rem;
        display: flex;
        align-items: center;
        justify-content: center;
        color: $primaryText;
      }
    }
  }
  :global(.swiper) {
    margin-left: calc((100% - 62.5rem) / 2);
    position: relative;
    display: flex;

    :global(.swiper-wrapper) {
      align-items: center;
    }
  }

  .slide {
    width: auto;
  }

  @include breakpoint-down-from(medium-desktop) {
    padding-left: 3rem;

    :global(.swiper) {
      margin-left: 0;
    }
  }
}

